--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,9 @@
         "start": "vite"
     },
     "devDependencies": {
+        "@types/node": "^18.11.11",
+        "@types/react": "^18.0.26",
+        "@types/react-dom": "^18.0.9",
         "typescript": "^4.9.3"
     },
     "dependencies": {
