--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,13 @@
 {
     "name": "server",
-    "version": "1.0.0",
-    "main": "index.js",
-    "author": "Alexander Vinokurov",
-    "license": "MIT",
     "type": "module",
+    "version": "1.0.0",
+    "license": "MIT",
     "scripts": {
-        "start": "node --watch index.js"
+        "start": "node -r dotenv/config --watch src/index.js"
     },
     "dependencies": {
+        "body-parser": "^1.20.1",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
