--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.4.5",
-        "vite": "^3.2.5"
+        "vite": "^3.2.5",
+        "vite-plugin-svgr": "^2.4.0"
     }
 }
