--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,12 @@
         "start": "node -r dotenv/config --watch src/index.js"
     },
     "dependencies": {
+        "bcrypt": "^5.1.0",
         "body-parser": "^1.20.1",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
-        "mongoose": "^6.8.0"
+        "mongoose": "^6.8.0",
+        "nanoid": "^4.0.0"
     }
 }
